# swachh-robot

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  hmi.cpp  start_simulation.sh
architecture_docs/: 01_system_architecture.md  02_component_diagram.md  03_data_flow_diagram.md  04_use_case_diagram.md  05_sequence_diagrams.md  06_state_model.md  07_data_model.md  08_api_interaction_map.md  09_deployment_runtime.md  10_risks_observations.md  README.md
code/: CMakeLists.txt  callbacks.cpp  callbacks.hpp  gui.cpp  gui.hpp  main.cpp  serial_comm.cpp  serial_comm.hpp  system_state.hpp
simulation/: README.md
simulation/launch/: spawn_robot.launch.py
simulation/src/vacuum_bot/: package.xml  setup.cfg  setup.py
simulation/src/vacuum_bot/launch/: vacuum_sim.launch.py
simulation/src/vacuum_bot/vacuum_bot/: autonomous_vacuum.py
simulation/worlds/: simple_room.world
src/swachh_gui/: CMakeLists.txt  package.xml
src/swachh_gui/src/: gui_teleop_node.cpp
src/swachh_robot/: package.xml  setup.cfg  setup.py
src/swachh_robot/launch/: simulation.launch.py
src/swachh_robot/models/turtlebot3_burger_camera/: model.sdf
src/swachh_robot/rviz/: robot_view.rviz
src/swachh_robot/swachh_robot/: arrow_teleop.py  async_logger.py  autonomous_navigator.py  box_marker.py  environment_viz.py  sensor_validator.py  slam_readiness.py
src/swachh_robot/worlds/: simple_room.world
swacch-yashas/: CMakeLists.txt  hmi_main.cpp  setup.sh  swacch.ino
